--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<h1>Welcome here</h1>
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="n terms : The terminology of a web developer" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>n terms</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/nterms">View on GitHub</a>
+
+          <h1 id="project_title">n terms</h1>
+          <h2 id="project_tagline">The terminology of a web developer</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a name="n-terms" class="anchor" href="#n-terms"><span class="octicon octicon-link"></span></a>n terms</h3>
+
+<h2>
+<a name="the-terminology-of-a-web-developer" class="anchor" href="#the-terminology-of-a-web-developer"><span class="octicon octicon-link"></span></a>The terminology of a web developer</h2>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
+</html>
